env: clean to test in separate env

--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,11 @@
             <version>3.0.0</version>
         </dependency>
     </dependencies>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/helpers</directory>
+            </resource>
+        </resources>
+    </build>
 </project>
