--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
-        <exec.mainClass>com.lordorb.filecleaner.FileCleaner</exec.mainClass>
+        <exec.mainClass>com.lordorb.filecleaner.FileCleanerJob</exec.mainClass>
     </properties>
     <dependencies>
         <dependency>
@@ -18,11 +18,4 @@
             <version>3.0.0</version>
         </dependency>
     </dependencies>
-    <build>
-        <resources>
-            <resource>
-                <directory>src/helpers</directory>
-            </resource>
-        </resources>
-    </build>
 </project>
